--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 @import './components/UserDash/index.scss';
+@import './components/ProfileDash/index.scss';
 
 html,
 body {
